--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="longitude">Longitude</string>
     <string name="reminder_description">Reminder Description</string>
     <string name="view_more_reminders">View More Reminders</string>
+    <string name="save_location">Save location</string>
 </resources>
